<resources>
    <string name="app_name">Moscow4D</string>

    <!-- Home page strings -->
    <string name="home_default_username">Ваше имя</string>
    <string name="home_searchview_query_hint">Название места</string>

    <!-- Settings page strings -->
    <string name="settings_category_username">Пользователь</string>
    <string name="settings_username_title">Имя пользователя</string>
    <string name="settings_username_default_value">Не установлено</string>

    <string name="settings_langs_title">Язык интерфейса</string>
    <string name="settings_language_value_rus" translatable="false">Русский</string>
    <string name="settings_language_value_eng" translatable="false">English</string>

    <string name="settings_category_sound">Звук</string>
    <string name="settings_speaker_title">Голос диктора</string>
    <string name="settings_speaker_voice_value_male">Мужской</string>
    <string name="settings_speaker_voice_value_female">Женский</string>

    <string name="settings_category_interface">Интерфейс</string>
    <string name="settings_interface_title">Цветовая схема</string>
    <string name="settings_color_theme_value_light">Светлая тема</string>
    <string name="settings_color_theme_value_dark">Темная тема</string>

    <!-- Place info page strings -->
    <string name="place_get_direction_btn_text">Проложить маршрут</string>
</resources>